# GeimBoi

./: .gitignore  .gitmodules  CMakeLists.txt  GeimBoi.sln  LICENSE  Makefile  default.nix  readme.md
.github/ISSUE_TEMPLATE/: bug---problem-template.md  bug-report.md
GeimBoi/: GeimBoi.vcxproj  main.cpp
GeimBoi/application/: appGui.cpp  appGui.hpp  appWindow.cpp  appWindow.hpp
GeimBoi/core/: gbBootRom.cpp  gbBootRom.hpp  gbCart.cpp  gbCart.hpp  gbGameBoy.cpp  gbGameBoy.hpp  gbPPU.cpp  gbPPU.hpp  gbZ80.cpp  gbZ80.hpp
GeimBoi/core/mbc/: gbMBC.cpp  gbMBC.hpp  gbMBC1.cpp  gbMBC1.hpp  gbMBC2.cpp  gbMBC2.hpp  gbMBC3.cpp  gbMBC3.hpp
GeimBoi/core/opcode/: cb_opcode.cpp  cb_opcode.hpp  opcode.cpp
GeimBoi/core/wrapper/: wrBootRom.cpp  wrCart.cpp  wrPPU.cpp  wrZ80.cpp
cmake/: FindSDL2.cmake
cmake/imgui/: CMakeLists.txt
src/: GeimBoi.aps  GeimBoi.filters  GeimBoi.rc  GeimBoi.vcxproj  main.cpp  resource.h  version.hpp
src/application/: appGui.cpp  appGui.hpp  appSettings.cpp  appSettings.hpp  appWindow.cpp  appWindow.hpp
src/application/gui/: rebindButton.cpp  rebindButton.hpp
src/application/imgui/: imgui_impl_sdl.cpp  imgui_impl_sdlrenderer.cpp
src/core/: gbAPU.cpp  gbAPU.hpp  gbBootRom.cpp  gbBootRom.hpp  gbCart.cpp  gbCart.hpp  gbGameBoy.cpp  gbGameBoy.hpp  gbPPU copyx  gbPPU.cpp  gbPPU.hpp  gbZ80.cpp  gbZ80.hpp  reg.hpp
src/core/apu/: apuChannel1.cpp  apuChannel1.hpp  apuChannel2.cpp  apuChannel2.hpp  apuChannel3.cpp  apuChannel3.hpp  apuDefenitions.hpp  apuSquare.cpp  apuSquare.hpp  soundWaves.cpp  soundWaves.hpp
src/core/mbc/: gbMBC.cpp  gbMBC.hpp  gbMBC1.cpp  gbMBC1.hpp  gbMBC2.cpp  gbMBC2.hpp  gbMBC3.cpp  gbMBC3.hpp
src/core/opcode/: cb_opcode.cpp  debugger.cpp  debugger.hpp  decompiler.cpp  decompiler.hpp  opcode.cpp
src/core/wrapper/: wrBootRom.cpp  wrCart.cpp  wrGameBoy.cpp  wrPPU.cpp  wrZ80.cpp  wrapper.hpp
src/emu/: base.hpp  emu.cpp  emu.hpp  gbCart.cpp  gbCart.hpp  gbGameBoy.cpp  gbGameBoy.hpp  gbPPU.cpp  gbPPU.hpp  gbZ80.cpp  gbZ80.hpp  reg.hpp
src/emu/opcode/: cb_opcode.cpp  cb_opcode.hpp  opcode.cpp  opcode.hpp
src/lua/: luaScript.cpp  luaScript.hpp
src/lua/api/: apiEmu.cpp  apiEmu.hpp  apiGui.cpp  apiGui.hpp  apiStd.cpp  apiStd.hpp  luaApi.cpp  luaApi.hpp
